<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.sign.SignInActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


        <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:src="@drawable/x2_cooktak_logo"
                android:contentDescription="@string/text_description_logo" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/edt_email_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/round_edittext"
                android:ems="12"
                android:hint="@string/text_id"
                android:inputType="textEmailAddress"
                android:padding="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                android:importantForAutofill="no" />

        <EditText
                android:id="@+id/edt_pass_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/round_edittext"
                android:ems="12"
                android:hint="@string/text_pass"
                android:inputType="textPassword"
                android:padding="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                android:importantForAutofill="no" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/btn_login_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginEnd="7dp"
                    android:background="@drawable/rounded_button"
                    android:ems="5"
                    android:text="@string/text_login"
                    tools:ignore="ButtonStyle" />

            <Button
                    android:id="@+id/btn_register_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="1dp"
                    android:background="@drawable/rounded_button"
                    android:ems="5"
                    android:text="@string/text_register"
                    tools:ignore="ButtonStyle" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>