<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".ui.Sign.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/x05_cooktak_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tex_cooktak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_register"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/image_view"
                app:layout_constraintStart_toStartOf="@+id/image_view"
                app:layout_constraintTop_toBottomOf="@+id/image_view" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tex_cooktak"
                app:layout_constraintVertical_bias="0.5">

            <TextView
                    android:id="@+id/tex_email_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="46dp"
                    android:text="@string/text_email"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/edt_email_register"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <EditText
                    android:id="@+id/edt_email_register"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="46dp"
                    android:hint="@string/text_emailHint"
                    android:inputType="textEmailAddress"
                    app:layout_constraintBottom_toTopOf="@id/tex_pwd_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_max="55dp"
                    app:layout_constraintHeight_min="45dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tex_email_register" />

            <TextView
                    android:id="@+id/tex_pwd_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_password"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/edt_pwd_register"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edt_email_register" />

            <EditText
                    android:id="@+id/edt_pwd_register"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="46dp"
                    android:hint="@string/text_passHint"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    app:layout_constraintBottom_toTopOf="@+id/tex_pwdInfo_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_max="55dp"
                    app:layout_constraintHeight_min="45dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tex_pwd_register" />

            <TextView
                    android:id="@+id/tex_pwdInfo_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="46dp"
                    android:text="@string/text_pass_notice"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toTopOf="@id/tex_conPwd_register"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edt_pwd_register" />

            <TextView
                    android:id="@+id/tex_conPwd_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_checkPass"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/edt_conPwd_register"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tex_pwdInfo_register" />

            <EditText
                    android:id="@+id/edt_conPwd_register"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="46dp"
                    android:hint="@string/text_confirmPass"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    app:layout_constraintBottom_toTopOf="@id/tex_nick_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_max="55dp"
                    app:layout_constraintHeight_min="45dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tex_conPwd_register" />

            <TextView
                    android:id="@+id/tex_nick_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_nick"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/layout_nick_register"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edt_conPwd_register" />

            <LinearLayout
                    android:id="@+id/layout_nick_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="46dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@id/tex_nickInfo_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tex_nick_register">

                <EditText
                        android:id="@+id/edt_nick_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="46dp"
                        android:layout_weight="7"
                        android:hint="@string/text_nickHint"
                        android:inputType="textPersonName"
                        android:maxLength="12" />

                <Button
                        android:id="@+id/btn_nick_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_checkOverlap" />
            </LinearLayout>

            <TextView
                    android:id="@+id/tex_nickInfo_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="46dp"
                    android:text="@string/text_notice_nick"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toTopOf="@id/tex_age_register"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_nick_register" />

            <TextView
                    android:id="@+id/tex_age_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_birth"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/date_birth_register"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tex_nickInfo_register" />

            <DatePicker
                    android:id="@+id/date_birth_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="46dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    app:layout_constraintBottom_toTopOf="@id/radio_group_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tex_age_register" />

            <TextView
                    android:id="@+id/tex_gender_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_gender"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/radio_group_register"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date_birth_register" />

            <RadioGroup
                    android:id="@+id/radio_group_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="46dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@id/btn_check_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tex_gender_register">

                <RadioButton
                        android:id="@+id/radio_btn_man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:checked="true"
                        android:text="@string/text_male" />

                <RadioButton
                        android:id="@+id/radio_btn_woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/text_female" />

                <RadioButton
                        android:id="@+id/radio_btn_unknown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/text_unknown" />
            </RadioGroup>

            <Button
                    android:id="@+id/btn_check_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="46dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="46dp"
                    android:text="@string/text_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radio_group_register" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>