<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.barcode.BarcodeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_barcode_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="25sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@+id/barcode_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.241" />

        <LinearLayout
                android:id="@+id/barcode_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="65dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/rounded_barcode_layout"
                android:gravity="center"
                android:padding="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/baseline_camera_black_48"
                    android:contentDescription="@string/text_description_logo" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/text_barcode_capture"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>