<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Material"
        tools:context=".ui.main.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/textView_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_search_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#585858"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.486"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_search">

            <EditText
                    android:id="@+id/edt_search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:background="#E4E4e4"
                    android:drawableStart="@drawable/ic_search_black_24dp"
                    android:hint="@string/text_searchHint"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="3dp"
                    android:textColor="#808080"
                    android:textColorHint="#808080"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/tag_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1.5"
                    android:background="#ACACAC" />

            <TextView
                    android:id="@+id/tag_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:gravity="center"
                    android:text="@string/text_tag_up"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1.5"
                    android:background="#ACACAC" />

        </LinearLayout>

        <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/flexboxLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                app:flexWrap="wrap"
                app:justifyContent="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tag_layout">

            <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_tag_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </com.google.android.flexbox.FlexboxLayout>

        <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="#ACACAC"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flexboxLayout" />

        <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_search_result"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line" />


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_search"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>